[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/Icons/256x256px/furnaceBase.png" type="Texture" id=2]
[ext_resource path="res://shaders/flame.tres" type="Shader" id=4]
[ext_resource path="res://scripts/CraftSmelting.gd" type="Script" id=5]
[ext_resource path="res://fonts/SourceSerifPro-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://sprites/Icons/flame.png" type="Texture" id=10]
[ext_resource path="res://nodes/components/ClickSelect.tscn" type="PackedScene" id=11]
[ext_resource path="res://nodes/components/ScrollSelect.tscn" type="PackedScene" id=12]
[ext_resource path="res://resources/defaultFont.tres" type="Theme" id=13]

[sub_resource type="DynamicFont" id=2]
size = 64
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Label/colors/font_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 4 )
shader_param/on = 0.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.752941 )

[node name="Smelting" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1152.0
margin_top = -465.0
mouse_filter = 2
theme = SubResource( 3 )
script = ExtResource( 5 )

[node name="RecipeLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
margin_bottom = 81.0
theme = ExtResource( 13 )
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 32
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 208.0
margin_bottom = 465.0
rect_min_size = Vector2( 208, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="RecipeSelect" parent="HBoxContainer" instance=ExtResource( 12 )]
unique_name_in_owner = true
margin_left = 240.0
margin_top = 76.0
margin_right = 408.0
margin_bottom = 388.0

[node name="OreRequired" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 440.0
margin_right = 568.0
margin_bottom = 465.0
rect_min_size = Vector2( 128, 0 )
alignment = 1

[node name="FuelSelect" parent="HBoxContainer" instance=ExtResource( 11 )]
unique_name_in_owner = true
margin_left = 600.0
margin_top = 168.0
margin_right = 728.0
margin_bottom = 296.0

[node name="Control3" type="Control" parent="HBoxContainer"]
margin_left = 760.0
margin_right = 760.0
margin_bottom = 465.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Furnace" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 792.0
margin_right = 1072.0
margin_bottom = 465.0
rect_min_size = Vector2( 280, 0 )
size_flags_vertical = 3

[node name="Texture" type="TextureRect" parent="HBoxContainer/Furnace"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 280.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Progress" type="TextureProgress" parent="HBoxContainer/Furnace/Texture"]
unique_name_in_owner = true
material = SubResource( 7 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -150.0
margin_right = -24.0
margin_bottom = -55.0
rect_scale = Vector2( 4.96287, 1.32689 )
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
fill_mode = 3
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0.47451, 0, 1 )
nine_patch_stretch = true

[node name="TimeLabel" type="Label" parent="HBoxContainer/Furnace"]
unique_name_in_owner = true
margin_top = 403.0
margin_right = 280.0
margin_bottom = 465.0
theme = ExtResource( 13 )
text = "03h:20m"
align = 1

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 1104.0
margin_right = 1200.0
margin_bottom = 465.0
rect_min_size = Vector2( 96, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Warning" type="Panel" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )

[node name="Label" type="Label" parent="Warning"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Build Furnace Oven"
align = 1
valign = 1

[connection signal="itemSelected" from="HBoxContainer/RecipeSelect" to="." method="_on_RecipeSelect_itemSelected"]
[connection signal="itemClicked" from="HBoxContainer/FuelSelect" to="." method="_on_FuelSelect_itemClicked"]
